# CanvasDriven

./: .gitignore  CanvasDriven_PRD.txt  LICENSE  README.md  package-lock.json  start.ps1  start.sh
.github/workflows/: opencode.yml
.superpowers/brainstorm/codex-20260608170453/content/: ui-direction.html
.superpowers/brainstorm/codex-20260608170453/state/: server-stopped
backend/: pyproject.toml
backend/src/canvasdriven/: __init__.py  agents.py  config.py  llm.py  main.py  models.py  payment.py  reducer.py  service.py  state.py
backend/tests/: test_config.py  test_llm.py  test_service.py
config/: llm.local.example.json
docs/superpowers/plans/: 2026-06-08-canvasdriven-demo-first-redesign.md  2026-06-17-chat-stream-layout.md
docs/superpowers/specs/: 2026-06-08-canvasdriven-demo-first-redesign.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  CanvasPane.tsx  MermaidPane.tsx  graphReducer.test.ts  graphReducer.ts  layout.ts  paymentTypes.ts  store.ts  styles.css  types.ts
frontend/src/components/: DownloadButton.tsx  PaymentModal.tsx  PricingModal.tsx
frontend/src/utils/: exportDiagram.test.ts  exportDiagram.ts
